--- a/architect.html
+++ b/architect.html
@@ -29,6 +29,21 @@
 
     </header>
     <main>
+        <!--teams section start-->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="g3-architects-resources-main/images/team1.png" alt="">
+                <img src="g3-architects-resources-main/images/team2.png" alt="">
+                <img src="g3-architects-resources-main/images/team3.png" alt="">
+                <img src="g3-architects-resources-main/images/team4.png" alt="">
+
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span><span> of Our</span> <span class="text-features">Features</span></h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore more</button>  
+            </div>
+        </section>
 
     </main>
     <footer>
