--- a/architect.html
+++ b/architect.html
@@ -20,7 +20,7 @@
         <div class="banner">
            <div class="banner-content">
             <h1 class="banner-title">Brand New Group of Architects</h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
            </div>
             <img src="g3-architects-resources-main/images/banner.png" alt="">
@@ -40,9 +40,20 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"><span class="quick-list">Quick list</span><span> of Our</span> <span class="text-features">Features</span></h3>
-                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore more</button>  
             </div>
+        </section>
+        <!--features section-->
+        <section class="Features">
+            
+    
+        </section>
+        <!--facts section-->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
         </section>
 
     </main>
