--- a/architect.html
+++ b/architect.html
@@ -53,6 +53,28 @@
         <section class="facts">
             <h3 class="section-title">Some Facts</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="g3-architects-resources-main/images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Awards Winning</p>
+                </div>
+                <div class="card">
+                    <img src="g3-architects-resources-main/images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Projects Finished</p>
+                </div>
+                <div class="card">
+                    <img src="g3-architects-resources-main/images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="g3-architects-resources-main/images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title">Email Send</p>
+                </div>
+            </div>
 
         </section>
 
