--- a/architect.html
+++ b/architect.html
@@ -77,6 +77,19 @@
             </div>
 
         </section>
+        <!--sponsors section-->
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="sponsor-img-container">
+                <img src="g3-architects-resources-main/images/sponsors/spotify.png" alt="">
+                <img src="g3-architects-resources-main/images/sponsors/amazon.png" alt="">
+                <img src="g3-architects-resources-main/images/sponsors/google.png" alt="">
+                <img src="g3-architects-resources-main/images/sponsors/telerama.png" alt="">
+                <img src="g3-architects-resources-main/images/sponsors/figma.png" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
